--- a/css/site.scss
+++ b/css/site.scss
@@ -16,6 +16,11 @@ $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
+$yellow-color:     #e5c94d;
+$teal-color:       #2899aa;
+$teal-shadow-color: #05818d;
+$sky-color:        #a6d9ee;
+
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
