--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,20 +8,26 @@
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li>
+            <span class="icon  icon--email">
+              <svg viewBox="0 0 32 32">
+                <path d="M26.667 0h-21.333c-2.934 0-5.334 2.4-5.334 5.334v21.332c0 2.936 2.4 5.334 5.334 5.334h21.333c2.934 0 5.333-2.398 5.333-5.334v-21.332c0-2.934-2.399-5.334-5.333-5.334zM26.667 4c0.25 0 0.486 0.073 0.688 0.198l-11.355 9.388-11.355-9.387c0.202-0.125 0.439-0.198 0.689-0.198h21.333zM5.334 28c-0.060 0-0.119-0.005-0.178-0.013l7.051-9.78-0.914-0.914-7.293 7.293v-19.098l12 14.512 12-14.512v19.098l-7.293-7.293-0.914 0.914 7.051 9.78c-0.058 0.008-0.117 0.013-0.177 0.013h-21.333z" fill="#000000"></path>
+              </svg>
+            </span>
+            <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+          </li>
           {% if site.facebook_username %}
           <li>
             <a href="https://facebook.com/{{ site.facebook_username }}">
               <span class="icon  icon--twitter">
                 <svg viewBox="0 0 32 32">
-                  <path d="M17.996 32h-5.996v-16h-4v-5.514l4-0.002-0.007-3.248c0-4.498 1.22-7.236 6.519-7.236h4.412v5.515h-2.757c-2.064 0-2.163 0.771-2.163 2.209l-0.008 2.76h4.959l-0.584 5.514-4.37 0.002-0.004 16z" fill="#000000"></path>
+                  <path d="M17.996 32h-5.996v-16h-4v-5.514l4-0.002-0.007-3.248c0-4.498 1.22-7.236 6.519-7.236h4.412v5.515h-2.757c-2.064 0-2.163 0.771-2.163 2.209l-0.008 2.76h4.959l-0.584 5.514-4.37 0.002-0.004 16z" fill="#4C66A4"></path>
               </span>
 
               <span class="username">{{ site.facebook_username }}</span>
             </a>
           </li>
           {% endif %}
-          <li><img src="/APDT_Prof_COLOR.jpg"></li>
         </ul>
       </div>
 
@@ -60,6 +66,7 @@
 
       <div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
+        <img src="/APDT_Prof_COLOR.jpg">
       </div>
     </div>
 
